# euler-2D

./: .gitignore  CMakeLists.txt  README.md
include/: types.hpp
include/euler2d/core/: config.hpp  equations.hpp  state.hpp
include/euler2d/io/: output.hpp
include/euler2d/mesh/: mesh2d.hpp  structured_grid.hpp  unstructured_grid.hpp
include/euler2d/numerics/: reconstruction.hpp  riemann.hpp  time_integrator.hpp
include/euler2d/solver/: solver.hpp
src/: main.cpp  solver.cpp
src/core/: equations.cpp
src/io/: output.cpp
src/mesh/: structured_grid.cpp  unstructured_grid.cpp
src/numerics/: reconstruction.cpp  riemann.cpp  time_integrator.cpp
src/solver/: solver.cpp
